# familiar-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ME-template.md  POLICY-ja.md  POLICY.md  README-de.md  README-fr.md  README-ja.md  README-zh-TW.md  README-zh.md  README.md  README_ja.md  SUPPORTED_LANGUAGES.md  autonomous-action.sample.sh  build-testflight.bat  build.bat  build.sh  desires.sample.conf  familiar-ai.iss  pyproject.toml  run-gui.bat  run-gui.sh  run.bat  schedule.sample.conf
benchmarks/: __init__.py  neighbor_eval.py  prompts.py  run.py  scenarios.py
docs/: architecture.md  future-model.md  handson-guide.md  technical.md  testflight.md
migration/: 2026-03-03-001_observations_baseline.py  2026-03-03-002_memory_events_jobs.py  2026-03-03-003_semantic_policy_projection.py  2026-03-03-004_memory_revisions.py  2026-03-07-005_scene_entities.py  2026-03-07-006_memory_consolidation.py  2026-03-08-007_memory_links.py  2026-04-15-008_memory_graph_runtime.py  2026-04-15-009_relationship_state.py
persona-template/: de.md  fr.md  zh.md
readme-l10n/: README-af.md  README-ar.md  README-as.md  README-az.md  README-be.md  README-bg.md  README-bn.md  README-bs.md  README-ca.md  README-ceb.md  README-cs.md  README-cy.md  README-da.md  README-de.md  README-el.md  README-es.md  README-et.md  README-fa.md  README-fi.md  README-fil.md  README-fr.md  README-ga.md  README-gl.md  README-gu.md  README-ha.md  README-he.md  README-hi.md  README-hr.md  README-hu.md  README-hy.md  README-id.md  README-is.md  README-it.md  README-ja.md  README-jv.md  README-ka.md  README-kk.md  README-kn.md  README-ko.md  README-ky.md  (+34 more)
scripts/: build_release.py  build_testflight_windows.py  build_windows.py  familiar_entry.py  familiar_testflight_entry.py  generate_l10n.py  new_migration.sh  prepare_testflight_env.py  release_flow.py  release_testflight_windows.py  translate_readme.py
tests/: conftest.py  test_adaptive_thinking.py  test_agent_morning.py  test_mic.py  (+75 more)
(+126 files in other folders)
