[project]
name = "familiar-ai"
version = "0.5.0"
description = "AI that lives alongside you — with eyes, voice, and memory"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "tinytuya>=1.15.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "google-genai>=1.0",
    "textual>=8.0.0",
    "textual-autocomplete>=4.0.6",
    "mcp>=1.0.0",
    "google-generativeai>=0.8.6",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.7.0",
    "qasync>=0.27.0",
]
camera = [
    "opencv-python>=4.00",
    "onvif-zeep-async>=4.0.0",
    "Pillow>=10.0.0",
    "zeroconf>=0.132.2",
]
voice = [
    "openai-whisper",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "av>=14.0.0",
]
all = [
    "familiar-ai[gui,camera,voice]",
]

[project.scripts]
familiar = "familiar_agent.main:main"
familiar-discover-cameras = "familiar_agent.camera_discovery:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/familiar_agent"]

[tool.uv]
default-groups = ["dev", "gui", "camera", "voice"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
extend-exclude = ["*.iss"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.10.0",
    "pre-commit>=4.5.1",
]
gui = [
    "PySide6>=6.7.0",
    "qasync>=0.27.0",
]
camera = [
    "opencv-python>=4.00",
    "onvif-zeep-async>=4.0.0",
    "Pillow>=10.0.0",
    "zeroconf>=0.132.2",
]
voice = [
    "openai-whisper",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "av>=14.0.0",
]
